CDAP-13558 Support CDC pipelines on Spark version 2.x (#7)
CDAP-13558 Support CDC pipelines on Spark version 2.x
- implemented integration tests for CTSQLServer source plugin
- introduced OperationType enum to make CDC records more type safe